# multiagent-patterns

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: _console.py  checkpointing_example.py  episodic_memory_example.py  fanout_example.py  hierarchical_example.py  hitl_example.py  plan_execute_example.py  react_example.py  reflection_example.py  routing_example.py  supervisor_example.py
playground/: __init__.py  __main__.py
playground/server/: app.py
playground/web/: index.html  package-lock.json  package.json
playground/web/src/: App.tsx  api.ts  styles.css  types.ts
playground/web/src/components/: Mermaid.tsx  Timeline.tsx
playground/web/src/pages/: Gallery.tsx  PatternDetail.tsx
src/langgraph_patterns/: __init__.py  events.py  guardrails.py  models.py  registry.py  tools.py
src/langgraph_patterns/memory/: __init__.py  checkpointing.py  episodic.py
src/langgraph_patterns/patterns/: __init__.py  fanout.py  hierarchical.py  hitl.py  plan_execute.py  react.py  reflection.py  routing.py  supervisor.py
tests/: conftest.py  test_fanout.py  test_hierarchical.py  test_hitl.py  test_memory.py  test_plan_execute.py  test_playground_api.py  test_react.py  test_reflection.py  test_routing.py  test_supervisor.py
